Added: question_template, congratulations_template and QuestionShowView

--- a/quizz/templates/main_menu.html
+++ b/quizz/templates/main_menu.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-    <p><a href="{% url 'quizz:start-quiz' %}">Start Quizz</a></p>
-    <p><a href="{% url 'quizz:results-table' %}">Check latest results</a></p>
+    <h2><p><a href="{% url 'quizz:player-form' %}">Start Quizz</a></p></h2>
+    <h2><p><a href="{% url 'quizz:results-table' %}">Check latest results</a></p></h2>
 {% endblock %}
